--- a/app/src/main/res/layout/news_card_view.xml
+++ b/app/src/main/res/layout/news_card_view.xml
@@ -1,14 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:layout_width="match_parent"
-              android:layout_height="wrap_content">
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                xmlns:card_view="http://schemas.android.com/apk/res-auto">
 
     <android.support.v7.widget.CardView
         android:id="@+id/news_cv"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_gravity="center"
-        android:elevation="3dp">
+        card_view:cardElevation="3dp"
+        card_view:cardUseCompatPadding="true">
 
         <RelativeLayout
             android:layout_width="match_parent"
@@ -23,7 +25,7 @@
                 android:id="@+id/item_post_author_name"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:textSize="15dp"
+                android:textSize="16dp"
                 android:layout_marginLeft="6dp"
                 android:textColor="@android:color/holo_blue_dark"
                 android:layout_toRightOf="@+id/item_post_author_photo"/>
@@ -33,7 +35,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:textColor="@android:color/secondary_text_dark"
-                android:textSize="12dp"
+                android:textSize="14dp"
                 android:layout_marginLeft="6dp"
                 android:layout_toRightOf="@+id/item_post_author_photo"
                 android:layout_below="@+id/item_post_author_name"/>
@@ -42,12 +44,14 @@
                 android:id="@+id/item_post_text"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="6dp"
                 android:textSize="16dp"
                 android:layout_below="@+id/item_post_author_photo"/>
 
             <ImageView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="6dp"
                 android:id="@+id/item_post_image"
                 android:layout_below="@id/item_post_text"/>
 
